--- a/README.html
+++ b/README.html
@@ -49,9 +49,25 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="multiomic_hub" class="level1">
 <h1>MultiOmic_hub</h1>
+<p>Welcome to the <strong>MultiOmics Hub</strong> project — a collaborative platform for exploring, analyzing, and presenting multi-omics data.<br>
+This repository is used for ongoing team development of the MultiOmics Hub website.</p>
+<hr>
+<section id="project-overview" class="level2">
+<h2 class="anchored" data-anchor-id="project-overview">📁 Project Overview</h2>
+<p>The goal of this project is to develop a user-friendly and extensible website to support interactive visualization and exploration of multi-omics data, particularly in the context of biomedical research.</p>
+<hr>
 </section>
-<section id="this-repository-aim-for-the-team-work-to-contribute-the-multiomics_hub-website-moving-on." class="level1">
-<h1>This repository aim for the team work to contribute the MultiOmics_hub website moving on.</h1>
+<section id="team-contacts" class="level2">
+<h2 class="anchored" data-anchor-id="team-contacts">👥 Team Contacts</h2>
+<p>For questions, suggestions, or collaboration inquiries, feel free to reach out to any of us:</p>
+<ul>
+<li><strong>Shengyuan Zeng</strong> — shengyuan.zeng91@gmail.com<br>
+</li>
+<li><strong>Xuekang Qi</strong> — xuekang.qi@ki.se<br>
+</li>
+<li><strong>Baizhen Chen</strong> — baizhen@kth.se</li>
+</ul>
+</section>
 </section>
 
 </main>
